style.css
@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Jura:wght@300..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Orbitron:wght@400..900&family=Outfit:wght@100..900&family=Playwrite+IN:wght@100..400&family=Playwrite+VN:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Orbitron', sans-serif;
}

html,
body {
    width: 100%;
    height: 100%;
    background-image: url("./images/background.webp");
}

#digital-hunter ul li {
    list-style: none;
    padding: 10px;
}
#digital-hunter ul li:hover{
    color: aqua;
}
#digital-hunter img {
    width: 100px;
}

#digital-hunter {
    display: flex;
    padding: 10px 20px;
    justify-content: space-around;
    align-items: center;
    gap: 20px;
}

#digital-hunter ul {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
}

#digital-hunter .btnstarted{
    border: 2px solid aqua;
    background-color: transparent;
    padding: 10px 20px;
    border-radius: 10px;
}
.horizontal-line{
    width: 50px;
    border: 2px solid aqua;
    background-color: aqua;
    position: absolute;
    top: 7%;
    left: 34%;
    border-radius: 3px;
}
.main{
    padding: 90px;
}
.main h1{
    font-size: 90px;
}
.main .aquahunters{
    color: aqua;
}
.main .para1{
margin-top: 20px;
margin-bottom: 20px;
}
.main .btn button{
    border: 2px solid white;
    padding: 10px 20px;
    border-radius: 10px;
    background-color: aqua;
}
.main .backlogo{
   display: flex; 
}
.main .backlogo #img1{
   position: absolute; 
   left: 30%;
   width: 60%;
   top: 10%;
}
.main .backlogo #img2{
   position: absolute; 
   width: 32%;
   left: 46%;
   bottom: 10%;
}
.stripe{
    display: flex;
    justify-content: center;
    text-align: center;
    /* backdrop-filter :blur(10px); */
    background-color: rgb(0, 61, 61);
    border-radius: 10px;
    padding: 20px;
    gap: 20px;
    margin: 10px 15px;
    border: 2px solid white;
}
.stripe h1{
    color: aqua;
}
.stripe h1 span{
    color: white;
}
.vertical-line{
    width: 1px;
    display: flex;
    border: 1px solid white;
    background: #000;
}
#star1 img{
    width: 13%;
    position: absolute;
    left: 2%;
}
#star2 img{
    position: absolute;
    width: 13%;
    right: 2%;
    top: 100%;
}
.cardsthree #centre-para{
    text-align: center;
    margin-top: 20px;
    margin-bottom: 12px;
    color: aqua;
}
.cardsthree #center-box{
    text-align: center;
    font-size: 40px;
}
.three-cards{
    display: flex;
    justify-content: space-evenly;
    
}
.three-cards .card-box {
    margin: 20px 30px;
    padding: 10px 20px;
    border: 2px solid white;
    border-radius: 20px;
}
.three-cards .card-box img{
    width: 400px;
    border-radius: 20px;
}
.three-cards .card-box i{
    margin-top: 20px;
    font-size: 20px;
}
.three-cards .card-box #imgforward{
    width: 30px;
    position: relative;
    left: 76%;
    top: 0%;
}
.footer{
    text-align: center;
}
.boxhead h1{
    text-align: center;
}
.fivebox{
    display: flex;
    justify-content: center;
    gap: 20px;
    align-items: center;
    margin-top: 30px;
}
.fivebox .boxCard {
    /* display: flex; */
    width: 250px;
    border-radius: 20px;
    height: 150px;
    /* background-color: rgb(0, 1, 0); */
    border: 1px solid white;
    padding: 20px;
}

 .footer-part{
    padding: 40px;
}

.box-footer{
    background-image: url(./images/footer.webp);
    border-radius: 50px;
    padding: 50px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    border: 2px solid white;
    color: white;
}

.footer-left h3{
    font-size: 45px;
    line-height: 55px;
}

.footer-left p{
    margin: 20px 0;
    color: gray;
}

.footer-left button{
    padding: 15px 35px;
    border: none;
    border-radius: 12px;
    background: #00f0c0;
    color: black;
    font-size: 16px;
    cursor: pointer;
}

.footer-middle{
    text-align: center;
}

.footer-middle p{
    margin: 20px 0;
    color: gray;
}

.social-icons{
    display: flex;
    gap: 15px;
    justify-content: center;
}

.footer-right h4{
    margin-bottom: 20px;
}

.footer-right p{
    margin: 15px 0;
    color: gray;
}

